--- a/examples/streaming/public/server-websocket.html
+++ b/examples/streaming/public/server-websocket.html
@@ -14,6 +14,7 @@
     <button id="stop-streaming">Stop streaming</button>
   </body>
   <script>
+    console.log("EventSource in app");
     let eventSource;
     document.getElementById("start-streaming").addEventListener("click", () => {
       eventSource?.close();
